test: test CI_Dev

--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -24,14 +24,14 @@ jobs:
         run: |
           flake8 main.py
 
-      # - name: Get branch id (push)
-      #   id: get_branch_id
-      #   if: github.event_name == 'push'
-      #   run: echo "##[set-output name=branch;]$(echo $(cut -d'/' -f2 <<< ${GITHUB_REF#refs/heads/}))"
+      - name: Get branch id (push)
+        if: github.event_name == 'push'
+        id: get_branch_id
+        run: echo "##[set-output name=branch;]$(echo $(cut -d'/' -f2 <<< ${GITHUB_REF#refs/heads/}))"
 
       - name: Get branch id (pull request)
-        id: get_branch_id
         if: github.event_name == 'pull_request'
+        id: get_branch_id
         run: echo "##[set-output name=branch;]$(echo $(cut -d'/' -f2 <<< ${GITHUB_HEAD_REF}))"
 
       - name: Checkout One Test Script
