--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -70,17 +70,15 @@ jobs:
 
       - name: Upload coverage to Codecov
         if: |
-          startsWith(github.ref, 'refs/heads/feat/') || 
           startsWith(github.head_ref, 'feat/') ||
-          startsWith(github.ref, 'refs/heads/main') ||
           startsWith(github.head_ref, 'main')
         uses: codecov/codecov-action@v2
         with:
           token: 81e01a89-f6b5-4711-b224-d09162825fad
-          directory: ./coverage/reports/
+          directory: ./
           env_vars: OS,PYTHON
           fail_ci_if_error: true
-          files: ./coverage1.xml,./coverage2.xml
+          files: ./coverage.xml
           flags: unittests
           name: codecov-umbrella
           verbose: true
