ci: add pytest-assume to pip install

--- a/.github/workflows/CI_QA.yml
+++ b/.github/workflows/CI_QA.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Install Libraries
         run: |
-          pip install pytest pytest-mock
+          pip install pytest pytest-mock pytest-assume
 
       - name: Checkout Own Repo
         uses: actions/checkout@v2
